--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ node_js:
   - 0.10
 
 env:
-  - LUA=""
-  - LUA="luajit"
+  - LUAROCKS_VERSION="2.1.2"
+  - PATH=${PATH}:${HOME}/bin
 
 branches:
   only:
@@ -13,7 +13,13 @@ branches:
 
 install:
   - sudo apt-get install lua5.2
-  - sudo apt-get install luarocks
+  - sudo apt-get install lua5.2-dev
+  - wget http://luarocks.org/releases/luarocks-${LUAROCKS_VERSION}.tar.gz
+  - tar zxvpf luarocks-${LUAROCKS_VERSION}.tar.gz
+  - cd luarocks-${LUAROCKS_VERSION}
+  - ./configure --prefix=${HOME} --lua-version=5.2 --with-lua-include="/usr/include/lua5.2"
+  - make all install
+  - cd ..
   - sudo luarocks install luassert
   - sudo luarocks install luacov
   - sudo luarocks install luacheck
