--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
-language: node_js
-
-node_js:
-  - 0.10
+language: erlang
 
 env:
   - LUAROCKS_VERSION="2.1.2"
@@ -12,6 +9,8 @@ branches:
 
 install:
   - sudo apt-get install npm
+  - sudo npm update npm -g
+  - sudo npm config set registry http://registry.npmjs.org/
   - sudo npm install -g docco
   - sudo apt-get install lua5.2
   - sudo apt-get install lua5.2-dev
