--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,6 @@ branches:
     - master
 
 install:
-  - sudo apt-get install npm
-  - sudo npm update npm -g
-  - sudo npm config set registry http://registry.npmjs.org/
-  - sudo npm install -g docco
   - sudo apt-get install lua5.2
   - sudo apt-get install lua5.2-dev
   - wget http://luarocks.org/releases/luarocks-${LUAROCKS_VERSION}.tar.gz
@@ -27,7 +23,9 @@ install:
   - luarocks install penlight
   - export $(luarocks path | tr "'" ";")
 
-script: "./bin/make-all"
+script:
+  - ./bin/make-test
+  - ./bin/make-check
 
 notifications:
   recipients:
