--- a/.travis.yml
+++ b/.travis.yml
@@ -7,25 +7,20 @@ branches:
   only:
     - master
 
-install:
-  - sudo apt-get install lua5.2
-  - sudo apt-get install lua5.2-dev
-  - wget http://luarocks.org/releases/luarocks-${LUAROCKS_VERSION}.tar.gz
-  - tar zxvpf luarocks-${LUAROCKS_VERSION}.tar.gz
-  - cd luarocks-${LUAROCKS_VERSION}
-  - ./configure --prefix=${HOME} --lua-version=5.2 --with-lua-include="/usr/include/lua5.2"
-  - make bootstrap
-  - cd ..
-  - export PATH=${PATH}:${HOME}/bin
-  - luarocks install luassert
-  - luarocks install luacov
-  - luarocks install luacheck
-  - luarocks install penlight
-  - export $(luarocks path | tr "'" ";")
+before_install:
+  - sudo apt-get install lua luarocks
+  - sudo luarocks install busted
+  - sudo luarocks install fakeredis
+  - sudo luarocks install luabitop
+  - sudo luarocks install luacov
+  - sudo luarocks install luacov-coveralls
+  - sudo lua ./bin/dependencies
 
 script:
-  - ./bin/make-test
   - ./bin/make-check
+
+after_success:
+  - luacov-coveralls --rot src/
 
 notifications:
   recipients:
