--- a/shippable.yml
+++ b/shippable.yml
@@ -1,6 +1,6 @@
-language: clojure
-lein:
-  - lein2
+language: php
+php:
+  - 5.3
 
 install:
   - sudo apt-get install -y diffutils gcc git make patch unzip wget
