--- a/shippable.yml
+++ b/shippable.yml
@@ -13,5 +13,24 @@ install:
   - sudo apt-get install -y nginx-extras imagemagick
   - ./bin/install --prefix=$HOME --sourcepath=$(pwd)
 
+before_script:
+  - rm    -rf shippable/testresults
+  - mkdir -p  shippable/testresults
+  - rm    -rf output
+  - mkdir -p  output
+
 script:
-  - ${HOME}/bin/cosy-check
+  - ${HOME}/bin/cosy-check output --test-format=junit
+
+after_script:
+  - mv output/test-*    shippable/testresults
+  - mv output/coverage  shippable/coverage
+  - mv luacov.*         shippable/
+
+notifications:
+  email:
+    recipients:
+      - alban@linard.fr
+      - leprieur@lipn.univ-paris13.fr
+    on_success: change
+    on_failure: always
