Trying to show test report in shippable.

--- a/shippable.yml
+++ b/shippable.yml
@@ -26,6 +26,7 @@ script:
 
 after_script:
   - mv output/test-*    shippable/testresults
+  - for file in shippable/testresults/*; do; mv ${file} ${file}.xml; done
   - mv output/coverage  shippable/coverage
   - mv luacov.*         shippable/
 
