But back shippable install in install tag.

--- a/shippable.yml
+++ b/shippable.yml
@@ -7,7 +7,7 @@ cache: true
 services:
  - redis
 
-before_install:
+install:
   - sudo apt-get update     -y
   - sudo apt-get autoremove -y
   - sudo apt-get install -y git make gcc diffutils patch wget unzip
