Add --full-output flag to bin/install and use it in shippable configuration to show all output.

--- a/shippable.yml
+++ b/shippable.yml
@@ -13,7 +13,7 @@ install:
   - sudo apt-get install -y git make gcc diffutils patch wget unzip
   - sudo apt-get install -y libev-dev libssl-dev
   - sudo apt-get install -y nginx-extras imagemagick
-  - ./bin/install --prefix=$HOME --sourcepath=$(pwd)
+  - ./bin/install --prefix=$HOME --sourcepath=$(pwd) --full-output
 
 before_script:
   - rm    -rf shippable/testresults
