Add submodule for luarocks.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "luajit"]
 	path = luajit
 	url = http://luajit.org/git/luajit-2.0.git
+[submodule "luarocks"]
+	path = luarocks
+	url = https://github.com/keplerproject/luarocks.git
