Add submodule for redis-lua.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "luarocks"]
 	path = luarocks
 	url = https://github.com/keplerproject/luarocks.git
+[submodule "redis-lua"]
+	path = redis-lua
+	url = https://github.com/nrk/redis-lua.git
