--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "redis-lua"]
 	path = redis-lua
 	url = https://github.com/nrk/redis-lua.git
+[submodule "openssl"]
+	path = openssl
+	url = https://github.com/openssl/openssl.git
