--- a/shippable.yml
+++ b/shippable.yml
@@ -7,8 +7,8 @@ services:
 
 install:
   - sudo apt-get autoremove -y
-  - ./bin/install --prefix=$HOME/cosy/server --mode=server --sourcepath=$(pwd) --in-ci
-  - ./bin/install --prefix=$HOME/cosy/client --mode=client --sourcepath=$(pwd) --in-ci
+  - ./bin/build-client --in-ci
+  - ./bin/build-server --prefix=$HOME/cosy/server --in-ci
 
 before_script:
   - rm    -rf shippable/testresults
