--- a/shippable.yml
+++ b/shippable.yml
@@ -1,31 +1,32 @@
 build_environment: Ubuntu 14.04
 
-language: node_js
+language: python
 
 services:
  - redis
 
-install:
-  - sudo apt-get autoremove -y
-  - sudo apt-get install tree
-  - ./bin/build-client --in-ci
-  - ./bin/build-server --prefix=$HOME/cosy/server --in-ci
+before_install:
+  - pip install hererocks
 
 before_script:
-  - ${HOME}/cosy/server/local/cosy/5.1/bin/luarocks list
-  - ${HOME}/cosy/server/local/cosy/5.2/bin/luarocks list
-  - rm    -rf shippable/testresults
-  - mkdir -p  shippable/testresults
   - rm    -rf output
-  - mkdir -p  output/server
+  - mkdir -p  output
+
+install:
+  - luarocks install luacheck
+  - luarocks install busted
+  - luarocks install luacov
+  - luarocks install luacov-coveralls
+  - ./bin/build-server --prefix=$HOME/cosy
 
 script:
-  - source ${HOME}/cosy/server/bin/cosy-path && echo $LUA_PATH && echo $LUA_CPATH
-  - source ${HOME}/cosy/server/bin/cosy-path && luajit -e 'require "bcrypt"'
-  - ${HOME}/cosy/server/bin/cosy-check output/server --test-format=junit
+  - ${HOME}/cosy/bin/cosy-check  output --test-format=junit
+  - ${HOME}/cosy/bin/cosy-server start --clean
+  - ./tests/user.sh ${HOME}/cosy/bin/cosy http://127.0.0.1:8080/
+  - ${HOME}/cosy/server/bin/cosy-server stop
 
 after_script:
-  - for file in output/server/test/*; do mv ${file} shippable/testresults/$(basename ${file}).xml; done
+  - for file in output/test/*; do mv ${file} shippable/testresults/$(basename ${file}).xml; done
 
 notifications:
   email:
