--- a/.travis.yml
+++ b/.travis.yml
@@ -45,11 +45,8 @@ before_script:
   - mkdir -p  output
 
 install:
-  - luarocks install luacheck
-  - luarocks install busted
-  - luarocks install luacov
-  - luarocks install luacov-coveralls
   - ./bin/build-server --prefix=$HOME/cosy --in-ci
+  - $HOME/cosy/bin/luarocks install luacov-coveralls
 
 script:
   - ${HOME}/cosy/bin/cosy-check  output --test-format=junit
