Show package.path and package.cpath in travis-ci and shippable.

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ before_script:
 
 install:
   - ./bin/build-server --prefix=$HOME/cosy --in-ci
+  - $HOME/bin/lua -e "print (package.path); print (package.cpath)"
 
 script:
   - ${HOME}/cosy/bin/cosy-check  output --test-format=junit
