--- a/shippable.yml
+++ b/shippable.yml
@@ -14,6 +14,7 @@ before_script:
 
 install:
   - ./bin/build-server --prefix=$HOME/cosy
+  - $HOME/bin/lua -e "print (package.path); print (package.cpath)"
 
 script:
   - ${HOME}/cosy/bin/cosy-check  output --test-format=junit
