--- a/shippable.yml
+++ b/shippable.yml
@@ -1,22 +1,19 @@
 build_image: shippableimages/ubuntu1404_python
 
-language: python
-
-services:
- - redis
-
-before_install:
-  - pip install hererocks
-
 before_script:
   - rm    -rf output
   - mkdir -p  output
 
 install:
+  - sudo apt-get install redis-server
   - ./bin/build-server --prefix=$HOME/cosy
   - $HOME/cosy/bin/lua -e "print (package.path); print (package.cpath)"
   - ls $HOME/cosy/lib/lua/5.2
   - $HOME/cosy/bin/lua -e "require 'bcrypt'"
+
+before_script:
+  - redis-server &
+  - sleep 1
 
 script:
   - ${HOME}/cosy/bin/cosy-check  output --test-format=junit
