Forgot -y flags to apt-get.

--- a/shippable.yml
+++ b/shippable.yml
@@ -5,7 +5,8 @@ before_script:
   - mkdir -p  output
 
 install:
-  - sudo apt-get install redis-server
+  - sudo apt-get update  -y
+  - sudo apt-get install -y redis-server
   - ./bin/build-server --prefix=$HOME/cosy
   - $HOME/cosy/bin/lua -e "print (package.path); print (package.cpath)"
   - ls $HOME/cosy/lib/lua/5.2
