--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ install:
   - ./bin/build-server --prefix=$HOME/cosy --in-ci
 
 script:
-  - ${HOME}/cosy/bin/cosy-check  output --test-format=junit
+  - ${HOME}/cosy/bin/cosy-check  --output=output --test-format=junit
   - ${HOME}/cosy/bin/cosy-server start --clean
   - ./tests/user.sh ${HOME}/cosy/bin/cosy http://127.0.0.1:8080/
   - ${HOME}/cosy/server/bin/cosy-server stop
