Fix invocation of cosy-server stop in travis-ci and shippable.

--- a/shippable.yml
+++ b/shippable.yml
@@ -17,7 +17,7 @@ script:
   - ${HOME}/cosy/bin/cosy-check  --output=output --test-format=junit
   - ${HOME}/cosy/bin/cosy-server start --clean
   - ./tests/user.sh ${HOME}/cosy/bin/cosy http://127.0.0.1:8080/
-  - ${HOME}/cosy/server/bin/cosy-server stop
+  - ${HOME}/cosy/bin/cosy-server stop
 
 after_script:
   - ls output/
