--- a/shippable.yml
+++ b/shippable.yml
@@ -6,10 +6,8 @@ install:
   - ./bin/build-server --prefix=$HOME/cosy --in-ci
 
 before_script:
-  - rm    -rf output
-  - mkdir -p  output
-  - redis-server &
-  - sleep 1
+  - rm -rf output && mkdir -p output
+  - redis-server & sleep 1
 
 script:
   - ${HOME}/cosy/bin/cosy-check  --output=output --test-format=junit
