--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Generated stuff:
-cosy-client-*.sh
-coverage/
-dump.rdb
-luacov.report.out
-luacov.stats.out
-node_modules/
-output/
-rockspec/
+/cosy-client-*.sh
+/coverage/
+/dump.rdb
+/luacov.report.out
+/luacov.stats.out
+/node_modules/
+/output/
+/rockspec/
 
 # User configuration:
 cosy.conf
