--- a/shippable.yml
+++ b/shippable.yml
@@ -18,7 +18,7 @@ after_failure:
   - cat ${HOME}/.cosy/__scenario__/nginx/error.log
 
 after_success:
-  - for file in output/test/*; do mv ${file} shippable/testresults/$(basename ${file}).xml; done
+  - mv output/test-results shippable/testresults/cosy.xml
 
 notifications:
   email:
