Add libev as dependency for cosy-client, to use copas.ev instead of copas.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lua.vm.js"]
 	path = lua.vm.js
 	url = https://github.com/kripken/lua.vm.js.git
+[submodule "libev"]
+	path = libev
+	url = https://github.com/enki/libev.git
