--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
   - ${HOME}/cosy/bin/cosy-check --output=output --test-format=junit
   - ${HOME}/cosy/bin/cosy-server start --port=8090
   - ./cosy-client-*.sh --target ${HOME}/cosy-client
+  - ls "${HOME}/cosy-client" "${HOME}/cosy-client/bin"
   - ./tests/user.sh default ${HOME}/cosy-client/bin/cosy --server=http://127.0.0.1:8090/
   - ${HOME}/cosy/bin/cosy-server stop
 
