--- a/shippable.yml
+++ b/shippable.yml
@@ -1,15 +1,18 @@
-build_image: shippableimages/ubuntu1404_python
+build_image: cosyverif/environment:master
 
 install:
-  - ./bin/build-server --in-ci --prefix=$HOME/cosy
-  - ./bin/build-client --in-ci
+  - ./bin/build-server --in-ci --prefix=/usr/local/cosy
+  - ./bin/build-client --in-ci --prefix=/usr/local/cosy
 
 before_script:
   - rm -rf output && mkdir -p output
-  - redis-server & sleep 1
 
 script:
-  - ${HOME}/cosy/bin/cosy-check --output=output --test-format=junit
+  - /usr/local/cosy/bin/cosy-check --output=output --test-format=junit
+  - /usr/local/cosy/bin/cosy-server start --port=8080
+  - for file in ./cosy-client-*.sh; do echo "Installing ${file}..."; "${file}" --target ./cosy-client; done
+  - ./tests/user.sh default ./cosy-client/bin/cosy --server=http://127.0.0.1:8080/
+  - /usr/local/cosy/bin/cosy-server stop
 
 after_failure:
   - cat ${HOME}/.cosy/__busted__/nginx/access.log
