--- a/wercker.yml
+++ b/wercker.yml
@@ -14,22 +14,18 @@ build:
         code: |
           chown -R root.users /home/cosy/install
     - script:
-        name: "Show path"
+        name: "Check server"
         code: |
           export CPATH="/home/cosy/install/include:${CPATH}"
           export LIBRARY_PATH="/home/cosy/install/lib:${LIBRARY_PATH}"
           export LD_LIBRARY_PATH="/home/cosy/install/lib:${LD_LIBRARY_PATH}"
-          /home/cosy/install/bin/luarocks path
-          ls -lh /home/cosy/install/lib/lua/5.2/
-          ls -lh /home/cosy/install/lib/
-          /home/cosy/install/bin/lua -e "require 'ev'"
-    - script:
-        name: "Check server"
-        code: |
           /home/cosy/install/bin/cosy-check --output=. --test-format=junit
     - script:
         name: "Check client"
         code: |
+          export CPATH="/home/cosy/install/include:${CPATH}"
+          export LIBRARY_PATH="/home/cosy/install/lib:${LIBRARY_PATH}"
+          export LD_LIBRARY_PATH="/home/cosy/install/lib:${LD_LIBRARY_PATH}"
           /home/cosy/install/bin/cosy-server start --port=8080
           ./cosy-client-*.sh --target client
           ./test/user.sh default ./client/bin/cosy --server=http://127.0.0.1:8080/
