--- a/shippable.yml
+++ b/shippable.yml
@@ -14,7 +14,7 @@ script:
   - /home/cosy/install/bin/cosy-check --output=output --test-format=junit
   - /home/cosy/install/bin/cosy-server start --port=8080
   - ./cosy-client-*.sh --target client
-  - ./test/user.sh default ./client/bin/cosy --server=http://127.0.0.1:8080/
+  - ./tests/user.sh default ./client/bin/cosy --server=http://127.0.0.1:8080/
   - home/cosy/install/bin/cosy-server stop
 
 after_failure:
